Fix trade-grid-tabs spacing

--- a/packages/fulcrum/src/styles/components/token-grid-tabs.scss
+++ b/packages/fulcrum/src/styles/components/token-grid-tabs.scss
@@ -1,125 +1,143 @@
 .trade-token-grid-tab {
-    padding-top: 50px;
-    overflow: hidden;
-    margin-bottom: 2px;
-    &__container {
-        display: flex;
-        justify-content: center;
-    }
+  padding-top: 50px;
+  overflow: hidden;
+  margin-bottom: 2px;
+  &__container {
+    display: flex;
+    justify-content: center;
+  }
 
-    &-item {
+  &-item {
+    background-color: #6488ff;
+    width: 100px;
+    height: 60px;
+    margin-bottom: -10px;
+    transition: 0.3s ease-in-out all;
+    &:not(:last-child) {
+      margin-right: 3px;
+    }
+    &--active {
+      height: 60px;
+      transform: translateY(-10px);
+      .trade-token-grid-tab-item__col-token-image {
+        margin-top: 5px;
+      }
+    }
+    &:not(&--active) {
+      &:hover {
+        cursor: pointer;
+        .trade-token-grid-tab-item__col-token-image {
+          opacity: 0.7;
+        }
+      }
+    }
+    &__col-token-image {
+      height: 50px;
+      width: 100px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+
+      img {
+        height: 34px;
+        width: auto;
+        margin-right: 6px;
+        margin-left: 8px;
+      }
+      span {
+        font-size: 12px;
+        font-weight: 600;
+        font-family: Muli;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 150%;
+        /* identical to box height, or 18px */
+
+        /* Main/White */
+
+        color: #ffffff;
+        @media (max-width: 959px) {
+          display: none;
+        }
+      }
+      &.wallet-img-div {
         background-color: #6488FF;
-        width: 100px;
-        height: 60px;
-        margin-bottom: -10px;
-        transition: 0.3s ease-in-out all;
-        &:not(:last-child) {
-            margin-right: 3px;
-        }
-        &--active {
-            height: 60px;
-            transform: translateY(-10px);
-            .trade-token-grid-tab-item__col-token-image{
-                margin-top: 5px;
-            }
-        }
-        &:not(&--active){
-            &:hover {
-                cursor: pointer;
-                .trade-token-grid-tab-item__col-token-image {
-                    opacity: 0.7;
-                }
-            }
-        }
-        &__col-token-image {
-            height: 50px;
-            width: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        img{
+            margin-left: 15px;
+            width: 17px;
 
-            img {
-                height: 36px;
-                width: auto;
-                margin-right: 6px;
-            }
-            span{
-                font-size: 12px;
-                font-weight: 600;
-                @media(max-width: 959px){
-                    display: none;
-                }
-            }
         }
+      }
     }
+  }
 
-    @media screen and (max-width: $mobile-version-max-width) {
-        position: fixed;
-        bottom: -2px;
-        z-index: 100;
-        left: 0;
-        width: 100%;
-        &-item {
-            width: 60px;
-            display: flex;
-            height: 60px;
-            &__col-token-image {
-                img {
-                    width: auto;
-                    height: 40px;
-                    margin-right: 0px;
-                }
-            }
+  @media screen and (max-width: $mobile-version-max-width) {
+    position: fixed;
+    bottom: -2px;
+    z-index: 100;
+    left: 0;
+    width: 100%;
+    &-item {
+      width: 60px;
+      display: flex;
+      height: 60px;
+      &__col-token-image {
+        img {
+          width: auto;
+          height: 40px;
+          margin-right: 0px;
         }
-        main & ~ .footer {
-            margin-bottom: 30px;
-        }
+      }
     }
+    main & ~ .footer {
+      margin-bottom: 30px;
+    }
+  }
 }
 @keyframes translateContainer {
-    from {
-        transform: translateX(-74px);   
-    }
-    to {
-        transform: translateX(1px); 
-    }
+  from {
+    transform: translateX(-74px);
+  }
+  to {
+    transform: translateX(1px);
+  }
 }
 @keyframes translateItem {
-    from {
-        transform: translateX(-25px);        
-    }
-    to {
-        transform: translateX(74px);
-    }
+  from {
+    transform: translateX(-25px);
+  }
+  to {
+    transform: translateX(74px);
+  }
 }
-.wrapper-loader{
-    overflow: hidden;
-    width: 74px;
+.wrapper-loader {
+  overflow: hidden;
+  width: 74px;
+  border-radius: 12px;
+  padding: 7px 0;
+  .container-loader {
+    animation: translateContainer 0.6s cubic-bezier(0, 0, 1, 1);
+    height: 12px;
     border-radius: 12px;
-    padding: 7px 0;
-    .container-loader{ 
-        animation: translateContainer 0.6s cubic-bezier(0, 0, 1, 1);
-        height: 12px;
-        border-radius: 12px;
-        background-color: var(--primary-bg);
-        display: flex;
-        align-items: center;
-        overflow: hidden;
-        .item-loader{
-            width: 25px;
-            height: 8px;
-            border-radius: 15px;
-            transform: translateX(-27px);
-            animation: translateItem 0.8s cubic-bezier(0, 0, 1, 1) 0.6s infinite;
-            .trade-token-grid &{
-                background-color: var(--primary-row);
-                border: 2px solid var(--primary-bg);
-            }
-            .own-token-grid &{
-                background-color: var(--secondary-row);
-                border: 2px solid var(--secondary-bg);
-            }
-
-        }
+    background-color: var(--primary-bg);
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    .item-loader {
+      width: 25px;
+      height: 8px;
+      border-radius: 15px;
+      transform: translateX(-27px);
+      animation: translateItem 0.8s cubic-bezier(0, 0, 1, 1) 0.6s infinite;
+      .trade-token-grid & {
+        background-color: var(--primary-row);
+        border: 2px solid var(--primary-bg);
+      }
+      .own-token-grid & {
+        background-color: var(--secondary-row);
+        border: 2px solid var(--secondary-bg);
+      }
     }
+  }
 }
