--- a/packages/fulcrum/src/styles/components/trade-token-grid.mobile.scss
+++ b/packages/fulcrum/src/styles/components/trade-token-grid.mobile.scss
@@ -232,10 +232,3 @@
   //  display: none;
   //}
 }
-
-.wallet-img-div{
-  background-color: #6488FF;
-  img.wallet-img {
-    height: 25px;
-  }
-}
